# cleanfig

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY.md  Makefile  README.md  RELEASE.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: .build-trigger  index.md
docs/gallery/: index.md
examples/: basic_line.py  esec_dual_y_light.py  four_panels.py  four_panels_dark.py  four_panels_light.py  notebook_example.py  violin_box.py  violin_box_dark.py  violin_box_light.py  weather_timeserie_check.py
examples/Data/: ESEC.md  IRIS_DMC_esecEventsDb.txt  weather_timeserie_check.csv
python/cleanfig/: __init__.py  _fallback.py
src/: lib.rs
tests/: test_basic_api.py  test_examples.py  test_import.py
tests/manual/: esec_volume_vs_mobility.py  poisson_field_magma.py
